# rules_nodejs-issue-3479

./: README.md
ext_ws/: BUILD.bazel  WORKSPACE  lib.js
main_ws/: BUILD.bazel  WORKSPACE  bin.js
